Fix layout issues

--- a/htdocs/css/themes/phprojekt/Tree.css
+++ b/htdocs/css/themes/phprojekt/Tree.css
@@ -203,8 +203,7 @@
 }
 
 .phprojekt .dijitTreeIcon {
-    width: 16px;
-    height: 16px;
+    width: 5px;
 }
 
 /**** Genereal styles ****/
