--- a/htdocs/css/themes/phprojekt/form/Textarea.css
+++ b/htdocs/css/themes/phprojekt/form/Textarea.css
@@ -18,3 +18,7 @@
     width: 302px;
     border: 1px solid #c0c0c0;
 }
+
+.phprojekt .dijitTextArea > div {
+    overflow: hidden;
+}
